ISPN-14785 Fix JSON value replacement bug exposed by stricter URL parsing